@@ -23,6 +23,7 @@ IN DEVELOPMENT ======= 1.3.1
 - added: request.isSecure
 - added: controller.isSecure
 - added: routing supports [https] and [http] flag (websocket too)
+- added: framework.on('configure')
 
 - updated: NoSQL embedded database version
 - updated: @{meta(title, [description], [keywords], [image])}
